--- a/weaver/requirements.txt
+++ b/weaver/requirements.txt
@@ -7,6 +7,7 @@ chardet==3.0.4
 cryptography==2.9.2
 Django==2.2.20
 django-cors-headers==3.1.1
+django-environ==0.4.5
 django-storages==1.11.1
 djangorestframework==3.10.3
 drf-flex-fields==0.8.9
